# GeneticAlgorithm

./: .gitignore  MAINDM.drawio  README.md  drone_model.pkl  eq_model.pkl  genal.md  main.bash  main.py  main.sh  pyproject.toml  req.txt  test.py
base/: IndividLogic.py  __init__.py
simul/: AgentManager.py  __init__.py  models.py  objects.py  settings.py
simul/models/: __init__.py  car.py  drone.py  equilibrim.py  objects.py
